# Home_inventory

./: Cargo.toml  README.md  data.html  data.js
Backend/: Cargo.toml  README.md
Backend/src/: main.rs
Frontend/: create.html  create.js  create_recipie.html  create_recipie.js  data.html  delete.html  edit.html  inventory.css  inventory.html  inventory.js  recipie.html  show_recipies.html  show_recipies.js
Frontend/js/: create.js  create_recipie.js  dashboard.js  data.js  inventory.js  login.js  show_recipies.js  signup.js
Frontend/static/: create.html  create_recipie.html  dashboard.html  data.html  delete.html  edit.html  inventory.css  inventory.html  login.html  recipie.html  show_recipies.html  signup.html  test.html
src/: main.rs
