[package]
name = "Home_inventory"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
serde_json = "1.0.142"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.9.2"
tower-http = { version = "0.5", features = ["cors"] }