[package]
name = "Home_inventory"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws","macros"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-private"] }
cookie = "0.18"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
serde_json = "1.0.142"
serde_with = "3.0"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = {version = "0.4",features = ["serde"]} 
serde = "1" 
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.9.2"
tower-http = { version = "0.5", features = ["cors"] }
tower-cookies = "0.9"
sha2="0.10"
